# napi-walker

./: Cargo.toml  index.d.ts  index.js  package.json  test.js
.github/workflows/: CI.yml
__test__/: index.spec.mjs
benches/: benchmark.rs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: builder.rs  counter.rs  lib.rs  table.rs  util.rs
